changed logo, added pending status, error status, edit reporter's text alignment, fix minor issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 body {
-  height: 100vh;
+  height: 130vh;
   background-repeat: no-repeat;
   background: linear-gradient(-45deg, #e0dada, #f1efd2);
   display: flex;
@@ -35,6 +35,26 @@ body {
   margin-bottom: 60px;
   color: #4b4b4b;
 }
+.city-input .info-txt {
+  display: none;
+  font-size: 1em;
+  padding: 12px 10px;
+  background-color: transparent;
+  color: #898787;
+  border-radius: 7px;
+}
+.info-txt.error {
+  display: block;
+  background-color: transparent;
+  color: #901111;
+  border: 1px solid;
+}
+.info-txt.pending {
+  display: block;
+  background-color: transparent;
+  color: #52ac7a;
+  border: 1px solid;
+}
 .city-input .input {
   width: 100%;
   outline: none;
@@ -48,23 +68,7 @@ body {
   background-color: transparent;
   display: flex;
 }
-/* This is a line separator that is not in used 
 
-.city-input .separator {
-  width: 100%;
-  height: 1px;
-  background: #414141;
-  margin-bottom: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.city-input .separator::after {
-  content: "OR";
-  background-color: #ffffff;
-  padding: 0 5px;
-}
-*/
 /*current location button */
 .city-input .detect-btn {
   width: 100%;
@@ -89,16 +93,9 @@ body {
   display: flex;
   justify-content: center;
 }
-.details-area .weathericon {
-  font-size: 1.2em;
-  font-weight: 400;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #838383;
-  text-align: right;
-}
 .details-area .image {
   width: 50%;
-  background-image: url("https://cdn2.iconfinder.com/data/icons/weather-flat-14/64/weather02-512.png");
+  background-image: url("");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -126,11 +123,36 @@ body {
   justify-content: space-around;
   margin: 1em 0;
 }
-
+.details-area .reporter {
+  font-size: 1em;
+  font-weight: 200;
+  text-align: center;
+}
 /* showing and hiding info */
 .active {
   display: flex;
 }
 .inactive {
   display: none;
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+  body {
+    background-color: #bff6e3;
+  }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 1024px) {
+  body {
+    background-color: #bff6e3;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+  body {
+    background-color: #bff6e3;
+  }
 }
